@@ -1,5 +1,6 @@
 next
 ----
+-tag_data: new component (designed for use in CloVR)
 -move_hmmpfam_results.pl: now handles htab with no model name in column 6
 -prepare_paired_ends_for_velvet: new component
 -velvet_optimiser: now allows an arbitrary number of input files
